--- a/miniTp2/template.pug
+++ b/miniTp2/template.pug
@@ -1,6 +1,14 @@
-
-
-        doctype html
+doctype html
 html(lang="en")
   head
-   
+    title= pageTitle
+  body
+    h1= pageH1
+    table
+        tr 
+            th Identifiant
+            th Ville 
+            each person in list
+                tr 
+                each user,city in person
+                    td=val
