add form new city

--- a/TP-MongoDB/views/template.pug
+++ b/TP-MongoDB/views/template.pug
@@ -12,3 +12,10 @@ html(lang="en")
             tr
             each attr in personne
                 td= attr
+    div
+      label Ajout d'une nouvelle ville
+      form(action="/city", method="post")
+        label(for="name") Nom de la ville
+        input(type="text" name="name")
+        button(type="submit") Envoyer
+                
