--- a/TP-MongoDB/views/template.pug
+++ b/TP-MongoDB/views/template.pug
@@ -13,11 +13,35 @@ html(lang="en")
             td= city._id
             td= city.name
             td 
-              button(onclick="editItem(#{city.id})", title="Edit") Modifier
+              button(onclick="editItem('"+city._id+"')", title="Edit") Modifier
     div
       label Ajout d'une nouvelle ville
       form(action="/city", method="post")
         label(for="name") Nom de la ville
         input(type="text" name="name")
         button(type="submit") Envoyer
+
+  script.
+    function editItem(id) {
+      var name = prompt("Entrer un nouveau nom");
+      alert(name);
+      var url ="/city/"+id
+      var data = {};
+      data.name = name;
+
+      var json = JSON.stringify(data);
+      var xhr = new XMLHttpRequest();
+      xhr.open('PUT',url , true);
+      
+      xhr.setRequestHeader('Content-type','application/json; charset=utf-8');
+      xhr.send(json);
+      
+      xhr.onreadystatechange = processRequest;
+      
+      function processRequest(e) {
+        console.log(e)
+      }
+
+
+    }
                 
